[package]
name = "rover"
version = "0.1.0"
edition = "2021"

[dependencies]
log = { version = "*", features = [
  "max_level_debug",
  "release_max_level_warn",
] }
bevy = { version = "0.14.2", features = ["dynamic_linking"] }
bevy_rapier3d = { version = "0.27.0", features = [
  "simd-stable",
  "parallel",
  "debug-render-3d",
] }
bevy-fps-counter = "0.5.0"
bevy_stl = { version = "0.14.0", features = ["wireframe"] }
urdf-rs = "0.9.0"
bevy_flycam = "*"

[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-C", "link-arg=-fuse-ld=lld"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"

[profile.wasm-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"
